--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
       - run: npm test
 
       - uses: actions/upload-artifact@master
+        if: always()
         with:
           name: allure-results
           path: allure-results
