--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Output Run ID
-        run: echo ${{ github.run_id }}
-      - name: Output Run Number
-        run: echo ${{ github.run_number }}
       - uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v2
@@ -26,16 +22,16 @@ jobs:
       - run: npx playwright install
       - run: npm test
 
-      - name: Generate report
-        if: always()
-        run: npm run report
+#      - name: Generate report
+#        if: always()
+#        run: npm run report
 
-      - uses: actions/upload-artifact@master
-        if: always()
-        with:
-          name: allure-report
-          path: allure-report
-          retention-days: 10
+#      - uses: actions/upload-artifact@master
+#        if: always()
+#        with:
+#          name: allure-report
+#          path: allure-report
+#          retention-days: 10
 
       - uses: actions/upload-artifact@master
         if: always()
@@ -52,6 +48,11 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
+      - run: |
+          cp -r ./gh-pages/last-history/. ./allure-results/history
+          allure generate allure-results --clean -o allure-report-temp
+          ls -lah
+
       - name: Test marketplace action
         uses: simple-elf/allure-report-action@master
         if: always()
@@ -62,6 +63,13 @@ jobs:
           allure_report: allure-report
           allure_history: allure-history
           keep_reports: 5
+
+      - name: Output Run Number
+        run: |
+          echo ${{ github.run_number }}
+          ls -lah
+          rm -R ${{ github.run_number }}
+          mv allure-report-temp ${{ github.run_number }}
 
       - name: Deploy report to Github Pages
         if: always()
