--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,9 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
-      - run: |
+      - name: Generate temp Allure report
+        if: always()
+        run: |
           cp -r ./gh-pages/last-history/. ./allure-results/history
           allure generate allure-results --clean -o allure-report-temp
           ls -lah
@@ -65,6 +67,7 @@ jobs:
           keep_reports: 5
 
       - name: Output Run Number
+        if: always()
         run: |
           echo ${{ github.run_number }}
           ls -lah
