--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         if: always()
         run: |
           cp -r ./gh-pages/last-history/. ./allure-results/history
-          allure generate allure-results --clean -o allure-report-temp
+          npm run report-gh
           ls -lah
 
       - name: Test marketplace action
@@ -66,7 +66,7 @@ jobs:
           allure_history: allure-history
           keep_reports: 5
 
-      - name: Output Run Number
+      - name: Replace report
         if: always()
         run: |
           echo ${{ github.run_number }}
