--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "test": "playwright test",
+    "report-gh": "allure generate allure-results --clean -o allure-report-temp",
     "report": "allure generate allure-results --clean"
   },
   "author": "",
