--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "scripts": {
     "test": "playwright test",
     "report-gh": "allure generate allure-results --clean -o allure-report-temp",
-    "report": "allure generate allure-results --clean"
+    "report": "allure generate allure-results --clean",
+    "lint-fix": "npx eslint . --ext .js,.jsx,.ts,.tsx,.json --fix"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "typescript": "^5.0.4",
     "@playwright/test": "^1.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "allure-commandline": "2.13.8",
     "allure-playwright": "2.0.0-beta.15",
-    "allure-commandline": "2.13.8"
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1"
   }
 }
