--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@playwright/test": "^1.39.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
-    "allure-commandline": "2.13.8",
-    "allure-playwright": "2.0.0-beta.15",
+    "allure-commandline": "2.24.1",
+    "allure-playwright": "2.9.2",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1"
